Fix dark mode dropdown menu

--- a/app/javascript/css/theme/_dark_mode.scss
+++ b/app/javascript/css/theme/_dark_mode.scss
@@ -212,4 +212,24 @@
   pre {
     color: $gray-200;
   }
+
+  .dropdown-header,
+  .dropdown-item {
+    background-color: transparent;
+    border-color: $gray-800;
+  }
+
+  .dropdown-header {
+    color: $gray-600;
+  }
+
+  .dropdown-item {
+    color: $gray-200;
+
+    &:focus,
+    &:hover {
+      background-color: $black;
+      color: $gray-200;
+    }
+  }
 }
